Add consulting page

--- a/src/html/consulting.html
+++ b/src/html/consulting.html
@@ -16,150 +16,64 @@
                 <div class="page">
                     <div class="page__content lifestyle-page">
                         <div class="consulting">
-                            <h1 class="consulting-title">
-                                Консультирование
-                            </h1>
-                            <div class="lifestyle-about">
-                                <p class="lifestyle-about__text">
-                                    Как известно, нужно не только уметь заработать деньги, но и правильно ими
-                                    распорядиться.
-                                </p>
-                                <p class="lifestyle-about__text">
-                                    Банк МФК стремится всегда и во всем помогать своим клиентам и готов предоставить
-                                    самый качественный сервис, выступая
-                                    советчиком, поверенным и посредником.
-                                </p>
-                                <p class="lifestyle-about__text">
-                                    Организация дополнительного индивидуального сервиса требует от специалистов банка не
-                                    только необходимых знаний и
-                                    навыков, но и настоящего вдохновения, что позволяет нашим клиентам ощутить всю
-                                    полноту и радость жизни.
-                                </p>
+                            <div class="consulting-title">
+                                <h1 class="">
+                                    Консультирование
+                                </h1>
                             </div>
-                            <div class="lifestyle-programm__wrap">
-                                <div class="programm-title">
-                                    Банк МФК предлагает своим клиентам специальную программу нефинансовых услуг
-                                    Lifestyle Management.
-                                    В число услуг входит:
+                            <div class="consulting-wrap">
+                                <div class="consulting-picture">
+                                    <img src="../assets/img/images/consulting.jpg" alt="">
                                 </div>
-                                <ul class="programm-list">
-                                    <li class="programm-list__item">
-                                        <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
-                                            подбор и приобретение эксклюзивных подарков, ювелирных украшений, старинных
-                                            изданий, винных коллекций;
-                                        </p>
-                                    </li>
-                                    <li class="programm-list__item">
-                                        <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
-                                            арт-банкинг: содействие по участию в аукционе, структурированию сделки и
-                                            доставке приобретенного предмета в Россию;
-                                        </p>
-                                    </li>
-                                    <li class="programm-list__item">
-                                        <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
-                                            взаимодействие с агентствами недвижимости в России и за рубежом;
-                                        </p>
-                                    </li>
-                                    <li class="programm-list__item">
-                                        <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
-                                            финансовое сопровождение взаимоотношений с домашним персоналом клиента;
-                                        </p>
-                                    </li>
-                                    <li class="programm-list__item">
-                                        <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
-                                            организация элитных туров, яхтенных чартеров и частных авиаперелетов;
-                                        </p>
-                                    </li>
-                                    <li class="programm-list__item">
-                                        <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
-                                            дисконтная программа Группы компаний Аркадия Новикова, для держателей
-                                            основных карт Visa Infinite, с предоставлением
-                                            скидок не только во всех ресторанах и бутиках группы, но и на товары и
-                                            услуги партнеров программы;
-                                        </p>
-                                    </li>
-                                    <li class="programm-list__item">
-                                        <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
-                                            представителей семейного бизнеса, традиционно отводящих качеству своей
-                                            продукции приоритетную роль;
-                                        </p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="insurance-wrap">
-                                <div class="insurance-about">
-                                    <div class="insurance-about__title">
-                                        <h3>
-                                            Международное <br>Медицинское страхование
-                                        </h3>
-                                    </div>
-                                    <div class="insurance-about__wrap-text">
-                                        <h5 class="insurance-about__text">
-                                            Услуги по международному медицинскому страхованию (MMС)
-                                        </h5>
-                                        <h5 class="insurance-about__text">
-                                            Полис ММС действует по всему миру и пожизненно.
-                                        </h5>
-                                    </div>
-                                    <div class="insurance-picture tablet-mobile">
-                                        <img src="../assets/img/images/insurance.jpg" alt="">
-                                    </div>
-                                    <ul class="insurance-about__list">
-                                        <li class="insurance-about__item">
-                                            cтраховой лимит до 2 500 000 долларов в год;
+                                <div class="consulting-wrapper">
+                                    <ul class="consulting-list">
+                                        <li class="consulting-list__item">
+                                            <img src="../assets/img/images/circle.png" alt="" class="item-circle">
+                                            <p class="item__text">
+                                                Консультации по вопросам наследования, дарения, функционирования
+                                                семейных фондов
+                                            </p>
                                         </li>
-                                        <li class="insurance-about__item">
-                                            диагностика и лечение всех видов заболеваний (от насморка, COVID-19 и
-                                            родовспоможения до трансплантации органов);
+                                        <li class="consulting-list__item">
+                                            <img src="../assets/img/images/circle.png" alt="" class="item-circle">
+                                            <p class="item__text">
+                                                Страхование выезжающих за рубеж: медицинское страхование, страхование
+                                                медицинских расходов при занятии экстремальными
+                                                видами спорта, страхование возможной утраты или повреждения багажа,
+                                                задержки или отмены рейса.
+                                            </p>
                                         </li>
-                                        <li class="insurance-about__item">
-                                            100% компенсация расходов на покупку лекарств, назначенных врачом;
-                                        </li>
-                                        <li class="insurance-about__item">
-                                            обслуживание в ведущих медицинских центрах Москвы и мира:
+                                        <li class="consulting-list__item">
+                                            <img src="../assets/img/images/circle.png" alt="" class="item-circle">
+                                            <p class="item__text">
+                                                Автострахование
+                                            </p>
                                         </li>
                                     </ul>
-                                    <div class="insurance-about__locate-wrap">
-                                        <div class="insurance-about__locate">
-                                            <span class="insurance-about__locate-item">
-                                                <p class="locate-item">
-                                                    Европейский Медицинский Центр (EMC)
-                                                </p>
-                                                <p class="locate-item">
-                                                    КГ «Лапино»
-                                                </p>
-                                                <p class="locate-item">
-                                                    Ильинская больница
-                                                </p>
-                                                <p class="locate-item">
-                                                    Клиника К+31
-                                                </p>
-                                            </span>
-                                        </div>
-                                        <div class="insurance-about__locate">
-                                            <span class="insurance-about__locate-item">
-                                                <p class="locate-item">
-                                                    GMS Клиника
-                                                </p>
-                                                <p class="locate-item">
-                                                    Hadassah Moscow
-                                                </p>
-                                                <p class="locate-item">
-                                                    ОАО «Медицина»
-                                                </p>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="insurance-picture">
-                                    <img src="../assets/img/images/insurance.jpg" alt="">
+                                    <ul class="consulting-list">
+                                        <li class="consulting-list__item">
+                                            <img src="../assets/img/images/circle.png" alt="" class="item-circle">
+                                            <p class="item__text">
+                                                Разработка оптимальных схем владения собственностью и сопровождение
+                                                сделок клиента по купле-продаже недвижимости в
+                                                России и за рубежом
+                                            </p>
+                                        </li>
+                                        <li class="consulting-list__item">
+                                            <img src="../assets/img/images/circle.png" alt="" class="item-circle">
+                                            <p class="item__text">
+                                                Консультирование по вопросам налогообложения имущества и доходов,
+                                                налоговое планирование, подготовка и защита налоговых
+                                                деклараций
+                                            </p>
+                                        </li>
+                                        <li class="consulting-list__item">
+                                            <img src="../assets/img/images/circle.png" alt="" class="item-circle">
+                                            <p class="item__text">
+                                                Программы страхования жизни
+                                            </p>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
