--- a/src/html/lifestyle.html
+++ b/src/html/lifestyle.html
@@ -45,39 +45,39 @@
                                 <ul class="programm-list">
                                     <li class="programm-list__item">
                                         <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
+                                        <p class="item__text">
                                             подбор и приобретение эксклюзивных подарков, ювелирных украшений, старинных
                                             изданий, винных коллекций;
                                         </p>
                                     </li>
                                     <li class="programm-list__item">
                                         <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
+                                        <p class="item__text">
                                             арт-банкинг: содействие по участию в аукционе, структурированию сделки и
                                             доставке приобретенного предмета в Россию;
                                         </p>
                                     </li>
                                     <li class="programm-list__item">
                                         <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
+                                        <p class="item__text">
                                             взаимодействие с агентствами недвижимости в России и за рубежом;
                                         </p>
                                     </li>
                                     <li class="programm-list__item">
                                         <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
+                                        <p class="item__text">
                                             финансовое сопровождение взаимоотношений с домашним персоналом клиента;
                                         </p>
                                     </li>
                                     <li class="programm-list__item">
                                         <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
+                                        <p class="item__text">
                                             организация элитных туров, яхтенных чартеров и частных авиаперелетов;
                                         </p>
                                     </li>
                                     <li class="programm-list__item">
                                         <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
+                                        <p class="item__text">
                                             дисконтная программа Группы компаний Аркадия Новикова, для держателей
                                             основных карт Visa Infinite, с предоставлением
                                             скидок не только во всех ресторанах и бутиках группы, но и на товары и
@@ -86,7 +86,7 @@
                                     </li>
                                     <li class="programm-list__item">
                                         <img src="../assets/img/images/circle.png" alt="" class="item-circle">
-                                        <p class="item_text">
+                                        <p class="item__text">
                                             представителей семейного бизнеса, традиционно отводящих качеству своей
                                             продукции приоритетную роль;
                                         </p>
