add investments page

--- a/src/html/inc/private-menu.html
+++ b/src/html/inc/private-menu.html
@@ -16,8 +16,8 @@
                 <p class="page__text current__text">Депозиты</p>
             </a>
         </div>
-        <div class="page-item" id="">
-            <a class="page-link" href="">
+        <div class="page-item" id="investments">
+            <a class="page-link" href="investments.html">
                 <svg class="page__more">
                     <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-investments" />
                 </svg>
