add credit-private page

--- a/src/html/inc/private-menu.html
+++ b/src/html/inc/private-menu.html
@@ -24,8 +24,8 @@
                 <p class="page__text current__text">Инвестиции</p>
             </a>
         </div>
-        <div class="page-item" id="">
-            <a class="page-link" href="">
+        <div class="page-item" id="credit-private">
+            <a class="page-link" href="credit-private.html">
                 <svg class="page__more">
                     <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-pr-credits" />
                 </svg>
