add brokers page

--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -396,14 +396,13 @@
                         </p>
                     </div>
                 </div>
-                <div class="document-list">
+                <div class="document-list deposits-list">
                     <div class="document-list__card">
                         <div class="document-list__content-wrapper">
                             <div class="document-list__title-block">
                                 <span>
                                     Документы
                                 </span>
-
                             </div>
                             <div class="document-list__list-block">
                                 <div class="document-list__document">
