--- a/src/html/investments.html
+++ b/src/html/investments.html
@@ -26,25 +26,25 @@
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="">Брокерское обслуживание</a>
+                                    <a href="brokers.html">Брокерское обслуживание</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="premiumcards.html">Структурированные продукты</a>
+                                    <a href="">Структурированные продукты</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="calculations.html">Участие в размещении облигаций</a>
+                                    <a href="">Участие в размещении облигаций</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="calculations.html">Депозитарное обслуживание</a>
+                                    <a href="">Депозитарное обслуживание</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
