--- a/src/html/credits.html
+++ b/src/html/credits.html
@@ -1,271 +1,276 @@
 <%- include('inc/header.html') %>
-<%- include('inc/corporate-menu.html') %>
-<div id="info" data-current-id="credit" data-main-menu-current-id="corporative-head"></div>
+	<%- include('inc/corporate-menu.html') %>
+		<div id="info" data-current-id="credit" data-main-menu-current-id="corporative-head"></div>
 
-<!-- Main content-->
+		<!-- Main content-->
 
-<section class="container">
-	<div class="second__header-credits">
-		<div class="second__text-credits__list">
-			<a class="second__text-credits" href="#">Главная /</a>
-			<a class="second__text-credits" href="./accountopen.html">Корпоративным клиентам /</a>
-			<a class="second__text-credits current-second__text-credits" href="./credits.html">Кредитование</a>
-		</div>
-		<h2 class="second__title-credits">Кредитование</h2>
-	</div>
-	<div class="credits">
-		<div class="card-slider credit-slider def-slider dots slick-dots-center desktop-dots-disable">
-			<div class="card-slider__slide">
-				<div class="card-slider__content-wrapper">
-					<div class="credits__card">
-						<div class="credits__front-image ibg ibg--cover ratio-w" data-ratio-multiplier="0.4">
-							<div class="credits__front-image-button-wrapper">
-								<div class="credits__front-image-button">
-									EUR | USD | RUR
+		<section class="container">
+			<div class="second__header-credits">
+				<div class="second__text-credits__list">
+					<a class="second__text-credits" href="#">Главная /</a>
+					<a class="second__text-credits" href="./accountopen.html">Корпоративным клиентам /</a>
+					<a class="second__text-credits current-second__text-credits" href="./credits.html">Кредитование</a>
+				</div>
+				<h2 class="second__title-credits">Кредитование</h2>
+			</div>
+			<div class="credits">
+				<div class="card-slider credit-slider def-slider dots slick-dots-center desktop-dots-disable">
+					<div class="card-slider__slide">
+						<div class="card-slider__content-wrapper">
+							<div class="credits__card">
+								<div class="credits__front-image ibg ibg--cover ratio-w" data-ratio-multiplier="0.4">
+									<div class="credits__front-image-button-wrapper">
+										<div class="credits__front-image-button">
+											EUR | USD | RUR
+										</div>
+									</div>
+									<img src="../assets/img/images/credit-hipoteca.jpg" alt="">
+								</div>
+								<div class="credits__title">
+									<span>Коммерческая ипотека (кредит под залог приобретаемой недвижимости)</span>
+								</div>
+								<div class="credits__advantages">
+									<div class="credits__advantage">
+										<span>Банковское финансирование под имеющиеся или приобретаемые объекты
+											недвижимости.</span>
+									</div>
+								</div>
+								<div class="credits__time">
+									<div class="credits__time-img">
+										<img src="../assets/img/svg/calendar.svg" alt="">
+									</div>
+									<span>до 5 лет</span>
+								</div>
+								<div class="credits__button-wrapper">
+									<button class="credits__button btn">
+										<span>Получить кредит</span>
+									</button>
 								</div>
 							</div>
-							<img src="../assets/img/images/credit-hipoteca.jpg" alt="">
-						</div>
-						<div class="credits__title">
-							<span>Коммерческая ипотека (кредит под залог приобретаемой недвижимости)</span>
-						</div>
-						<div class="credits__advantages">
-							<div class="credits__advantage">
-								<span>Банковское финансирование под имеющиеся или приобретаемые объекты
-									недвижимости.</span>
-							</div>
-						</div>
-						<div class="credits__time">
-							<div class="credits__time-img">
-								<img src="../assets/img/svg/calendar.svg" alt="">
-							</div>
-							<span>до 5 лет</span>
-						</div>
-						<div class="credits__button-wrapper">
-							<button class="credits__button btn">
-								<span>Получить кредит</span>
-							</button>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="card-slider__slide">
-				<div class="card-slider__content-wrapper">
-					<div class="credits__card">
-						<div class="credits__front-image ibg ibg--cover ratio-w" data-ratio-multiplier="0.4">
-							<div class="credits__front-image-button-wrapper">
-								<div class="credits__front-image-button">
-									EUR | USD | RUR
+					<div class="card-slider__slide">
+						<div class="card-slider__content-wrapper">
+							<div class="credits__card">
+								<div class="credits__front-image ibg ibg--cover ratio-w" data-ratio-multiplier="0.4">
+									<div class="credits__front-image-button-wrapper">
+										<div class="credits__front-image-button">
+											EUR | USD | RUR
+										</div>
+									</div>
+									<img src="../assets/img/images/credit-buisness.jpg" alt="">
+								</div>
+								<div class="credits__title">
+									<span>Кредитная линия на развитие бизнеса</span>
+								</div>
+								<div class="credits__advantages">
+									<div class="credits__advantage">
+										<span>Банковская ссуда для поддержания и развития финансово-хозяйственной
+											деятельности
+											компании. </span>
+									</div>
+									<div class="credits__advantage">
+										<span>Широкий спектр целевого назначения: от выплаты заработной платы и налогов
+											до
+											формирования запасов и приобретения оборудования.</span>
+									</div>
+									<div class="credits__advantage">
+										<span>Возможность открытия возобновляемой кредитной линии.</span>
+									</div>
+								</div>
+								<div class="credits__time">
+									<div class="credits__time-img">
+										<img src="../assets/img/svg/calendar.svg" alt="">
+									</div>
+									<span>от 1 до 2 лет</span>
+								</div>
+								<div class="credits__button-wrapper">
+									<button class="credits__button btn">
+										<span>Получить кредит</span>
+									</button>
 								</div>
 							</div>
-							<img src="../assets/img/images/credit-buisness.jpg" alt="">
-						</div>
-						<div class="credits__title">
-							<span>Кредитная линия на развитие бизнеса</span>
-						</div>
-						<div class="credits__advantages">
-							<div class="credits__advantage">
-								<span>Банковская ссуда для поддержания и развития финансово-хозяйственной деятельности
-									компании. </span>
-							</div>
-							<div class="credits__advantage">
-								<span>Широкий спектр целевого назначения: от выплаты заработной платы и налогов до
-									формирования запасов и приобретения оборудования.</span>
-							</div>
-							<div class="credits__advantage">
-								<span>Возможность открытия возобновляемой кредитной линии.</span>
-							</div>
-						</div>
-						<div class="credits__time">
-							<div class="credits__time-img">
-								<img src="../assets/img/svg/calendar.svg" alt="">
-							</div>
-							<span>от 1 до 2 лет</span>
-						</div>
-						<div class="credits__button-wrapper">
-							<button class="credits__button btn">
-								<span>Получить кредит</span>
-							</button>
 						</div>
 					</div>
-				</div>
-			</div>
-			<div class="card-slider__slide">
-				<div class="card-slider__content-wrapper">
-					<div class="credits__card">
-						<div class="credits__front-image ibg ibg--cover ratio-w" data-ratio-multiplier="0.4">
-							<div class="credits__front-image-button-wrapper">
-								<div class="credits__front-image-button">
-									EUR | USD | RUR
+					<div class="card-slider__slide">
+						<div class="card-slider__content-wrapper">
+							<div class="credits__card">
+								<div class="credits__front-image ibg ibg--cover ratio-w" data-ratio-multiplier="0.4">
+									<div class="credits__front-image-button-wrapper">
+										<div class="credits__front-image-button">
+											EUR | USD | RUR
+										</div>
+									</div>
+									<img src="../assets/img/images/credit-finance.jpg" alt="">
 								</div>
-							</div>
-							<img src="../assets/img/images/credit-finance.jpg" alt="">
-						</div>
-						<div class="credits__title">
-							<span>Рефинансирование кредита другого Банка на выгодных условиях</span>
-						</div>
-						<div class="credits__advantages">
-							<div class="credits__advantage">
-								<span>Погашение кредитных обязательств в других банках за счёт ссуды АО АКБ
-									«МФК».</span>
-							</div>
-							<div class="credits__advantage">
-								<span>Позволяет оптимизировать долговую нагрузку компании за счёт изменения сроков
-									погашения и стоимости кредитных ресурсов</span>
-							</div>
-						</div>
-						<!-- <div class="credits__time">
+								<div class="credits__title">
+									<span>Рефинансирование кредита другого Банка на выгодных условиях</span>
+								</div>
+								<div class="credits__advantages">
+									<div class="credits__advantage">
+										<span>Погашение кредитных обязательств в других банках за счёт ссуды АО АКБ
+											«МФК».</span>
+									</div>
+									<div class="credits__advantage">
+										<span>Позволяет оптимизировать долговую нагрузку компании за счёт изменения
+											сроков
+											погашения и стоимости кредитных ресурсов</span>
+									</div>
+								</div>
+								<!-- <div class="credits__time">
                                 <div class="credits__time-img">
                                     <img src="../assets/img/svg/calendar.svg" alt="">
                                 </div>
                                 <span>до 5 лет</span>
                             </div> -->
-						<div class="credits__button-wrapper">
-							<button class="credits__button btn">
-								<span>Получить кредит</span>
-							</button>
+								<div class="credits__button-wrapper">
+									<button class="credits__button btn">
+										<span>Получить кредит</span>
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
 
-	<div class="document-list">
-		<div class="document-list__card">
-			<div class="document-list__content-wrapper">
-				<div class="document-list__title-block">
-					<span>
-						Документы
-					</span>
+			<div class="document-list">
+				<div class="document-list__card">
+					<div class="document-list__content-wrapper">
+						<div class="document-list__title-block">
+							<span>
+								Документы
+							</span>
 
-				</div>
-				<div class="document-list__list-block">
-					<div class="document-list__document">
-						<div class="document-list__document__content-wrapper">
-							<div class="document-list__document__icon">
-								<img src="../assets/img/images/pdf.png" alt="pdf">
-							</div>
-							<div class="document-list__document__text-wrapper">
-								<div class="document-list__document__title">
-									<span>Перечень страховых организаций, удовлетворяющих требованиям Банка</span>
-								</div>
-								<div class="document-list__document__description">
-									<span>PDF, 279 КБ / 04 июня 2018</span>
-								</div>
-							</div>
 						</div>
-					</div>
-					<div class="document-list__document">
-						<div class="document-list__document__content-wrapper">
-							<div class="document-list__document__icon">
-								<img src="../assets/img/images/pdf.png" alt="pdf">
-							</div>
-							<div class="document-list__document__text-wrapper">
-								<div class="document-list__document__title">
-									<span>Перечень документов для экспресс-анализа</span>
-								</div>
-								<div class="document-list__document__description">
-									<span>PDF, 279 КБ / 04 июня 2018</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="document-list__document">
-						<div class="document-list__document__content-wrapper">
-							<div class="document-list__document__icon">
-								<img src="../assets/img/images/word.png" alt="pdf">
-							</div>
-							<div class="document-list__document__text-wrapper">
-								<div class="document-list__document__title">
-									<span>Общие условия комплексного банковского обслуживания</span>
-								</div>
-								<div class="document-list__document__description">
-									<span>PDF, 279 КБ / 04 июня 2018</span>
+						<div class="document-list__list-block">
+							<div class="document-list__document">
+								<div class="document-list__document__content-wrapper">
+									<div class="document-list__document__icon">
+										<img src="../assets/img/images/pdf.png" alt="pdf">
+									</div>
+									<div class="document-list__document__text-wrapper">
+										<div class="document-list__document__title">
+											<span>Перечень страховых организаций, удовлетворяющих требованиям
+												Банка</span>
+										</div>
+										<div class="document-list__document__description">
+											<span>PDF, 279 КБ / 04 июня 2018</span>
+										</div>
+									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="document-list__document">
-						<div class="document-list__document__content-wrapper">
-							<div class="document-list__document__icon">
-								<img src="../assets/img/images/word.png" alt="pdf">
-							</div>
-							<div class="document-list__document__text-wrapper">
-								<div class="document-list__document__title">
-									<span>Заявление об открытии счета</span>
-								</div>
-								<div class="document-list__document__description">
-									<span>PDF, 279 КБ / 04 июня 2018</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="document-list__document" data-readmore-identifier="doc-list-readmore">
-						<div class="document-list__document__content-wrapper">
-							<div class="document-list__document__icon">
-								<img src="../assets/img/images/word.png" alt="pdf">
-							</div>
-							<div class="document-list__document__text-wrapper">
-								<div class="document-list__document__title">
-									<span>Общие условия комплексного банковского обслуживания</span>
-								</div>
-								<div class="document-list__document__description">
-									<span>PDF, 279 КБ / 04 июня 2018</span>
+							<div class="document-list__document">
+								<div class="document-list__document__content-wrapper">
+									<div class="document-list__document__icon">
+										<img src="../assets/img/images/pdf.png" alt="pdf">
+									</div>
+									<div class="document-list__document__text-wrapper">
+										<div class="document-list__document__title">
+											<span>Перечень документов для экспресс-анализа</span>
+										</div>
+										<div class="document-list__document__description">
+											<span>PDF, 279 КБ / 04 июня 2018</span>
+										</div>
+									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="document-list__document" data-readmore-identifier="doc-list-readmore">
-						<div class="document-list__document__content-wrapper">
-							<div class="document-list__document__icon">
-								<img src="../assets/img/images/pdf.png" alt="pdf">
-							</div>
-							<div class="document-list__document__text-wrapper">
-								<div class="document-list__document__title">
-									<span>Перечень страховых организаций, удовлетворяющих требованиям Банка</span>
+							<div class="document-list__document">
+								<div class="document-list__document__content-wrapper">
+									<div class="document-list__document__icon">
+										<img src="../assets/img/images/word.png" alt="pdf">
+									</div>
+									<div class="document-list__document__text-wrapper">
+										<div class="document-list__document__title">
+											<span>Общие условия комплексного банковского обслуживания</span>
+										</div>
+										<div class="document-list__document__description">
+											<span>PDF, 279 КБ / 04 июня 2018</span>
+										</div>
+									</div>
 								</div>
-								<div class="document-list__document__description">
-									<span>PDF, 279 КБ / 04 июня 2018</span>
+							</div>
+							<div class="document-list__document">
+								<div class="document-list__document__content-wrapper">
+									<div class="document-list__document__icon">
+										<img src="../assets/img/images/word.png" alt="pdf">
+									</div>
+									<div class="document-list__document__text-wrapper">
+										<div class="document-list__document__title">
+											<span>Заявление об открытии счета</span>
+										</div>
+										<div class="document-list__document__description">
+											<span>PDF, 279 КБ / 04 июня 2018</span>
+										</div>
+									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-					<!-- data-readmore-identifier="doc-list-readmore" -->
+							<div class="document-list__document" data-readmore-identifier="doc-list-readmore">
+								<div class="document-list__document__content-wrapper">
+									<div class="document-list__document__icon">
+										<img src="../assets/img/images/word.png" alt="pdf">
+									</div>
+									<div class="document-list__document__text-wrapper">
+										<div class="document-list__document__title">
+											<span>Общие условия комплексного банковского обслуживания</span>
+										</div>
+										<div class="document-list__document__description">
+											<span>PDF, 279 КБ / 04 июня 2018</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="document-list__document" data-readmore-identifier="doc-list-readmore">
+								<div class="document-list__document__content-wrapper">
+									<div class="document-list__document__icon">
+										<img src="../assets/img/images/pdf.png" alt="pdf">
+									</div>
+									<div class="document-list__document__text-wrapper">
+										<div class="document-list__document__title">
+											<span>Перечень страховых организаций, удовлетворяющих требованиям
+												Банка</span>
+										</div>
+										<div class="document-list__document__description">
+											<span>PDF, 279 КБ / 04 июня 2018</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- data-readmore-identifier="doc-list-readmore" -->
 
+						</div>
+					</div>
+					<div class="document-list__read-more read-more__wrapper">
+						<div class="read-more readmore" id="doc-list-readmore">
+							<span class="read-more__text-more">Смотреть все</span>
+							<span class="read-more__text-less">Скрыть</span>
+							<img src="../assets/img/svg/read-more-btn.svg" alt="">
+						</div>
+					</div>
 				</div>
 			</div>
-			<div class="document-list__read-more read-more__wrapper">
-				<div class="read-more readmore" id="doc-list-readmore">
-					<span class="read-more__text-more">Смотреть все</span>
-					<span class="read-more__text-less">Скрыть</span>
-					<img src="../assets/img/svg/read-more-btn.svg" alt="">
+			<div class="rates">
+				<div class="rates__link-item">
+					<a class="rates__link" href="#">
+						Тарифы на РКО
+					</a>
+					<svg class="rates__svg">
+						<use href="../assets/img/svg/sprite/symbol-defs.svg#icon-next" />
+					</svg>
+				</div>
+				<div class="rates__item-contacts">
+					<div class="rates__contacts">
+						<h5 class="rates__title">Контакты:</h5>
+						<p class="rates__text">
+							DKB@mfk-bank.ru<br>
+							+7 495 287-02-60
+						</p>
+					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<div class="rates">
-		<div class="rates__link-item">
-			<a class="rates__link" href="#">
-				Тарифы на РКО
-			</a>
-			<svg class="rates__svg">
-				<use href="../assets/img/svg/sprite/symbol-defs.svg#icon-next" />
-			</svg>
-		</div>
-		<div class="rates__item-contacts">
-			<div class="rates__contacts">
-				<h5 class="rates__title">Контакты:</h5>
-				<p class="rates__text">
-					DKB@mfk-bank.ru<br>
-					+7 495 287-02-60
-				</p>
-			</div>
-		</div>
-	</div>
-</section>
-<%- include('inc/footer.html') %>
+		</section>
+		<%- include('inc/footer.html') %>
 
-</body>
+			</body>
 
-</html>
+			</html>
