Fixed tabs on brokers.html

--- a/src/html/brokers.html
+++ b/src/html/brokers.html
@@ -110,8 +110,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="brokers-docs__wrap" id="doc-tabs">
-                                        <div class="tarifs" id="tarifs">
+                                    <div class="brokers-docs__wrap tabs__windows" id="doc-tabs">
+                                        <div class="tarifs tabs__tab-window" id="tarifs">
                                             <div class="document-list__document">
                                                 <div class="document-list__document__content-wrapper">
                                                     <div class="document-list__document__icon">
@@ -165,7 +165,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="docs" id="docs">
+                                        <div class="docs tabs__tab-window" id="docs">
                                             <div class="document-list__document">
                                                 <div class="document-list__document__content-wrapper">
                                                     <div class="document-list__document__icon">
