Commit before pull

--- a/src/html/coins.html
+++ b/src/html/coins.html
@@ -3,6 +3,7 @@
         <div id="info" data-current-id="coins" data-main-menu-current-id="private-client-head"></div>
 <!-- Main content-->
         <section>
+            <!-- <h1>test</h1> -->
             <div class="container">
                 <div class="breadcrumbs">
                     <div class="breadcrumbs__step"><a href="/">Главная</a></div>
@@ -21,7 +22,7 @@
                                 <div class="sidebar__item-text">
                                     <a href="coins.html">Монеты</a>
                                 </div>
-                                <div class="sidebar__item-icon"></div>
+                                <div class="sidebar__item-icon arrow arrow--32 arrow--blue"></div>
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
