--- a/src/html/cards.html
+++ b/src/html/cards.html
@@ -165,7 +165,7 @@
 							<div class="card-list__card__button-wrapper">
 								<button class="card-list__card__button btn">Получить консультацию</button>
 								<a class="card-list__card__button btn btn--transparent"
-									href="single-card.html">Подробнее о вкладе</a>
+									href="single-card.html">Подробнее о карте</a>
 							</div>
 						</div>
 					</div>
@@ -249,7 +249,7 @@
 							<div class="card-list__card__button-wrapper">
 								<button class="card-list__card__button btn">Получить консультацию</button>
 								<a class="card-list__card__button btn btn--transparent"
-									href="single-card.html">Подробнее о вкладе</a>
+									href="single-card.html">Подробнее о карте</a>
 							</div>
 						</div>
 					</div>
@@ -334,7 +334,7 @@
 							<div class="card-list__card__button-wrapper">
 								<button class="card-list__card__button btn">Получить консультацию</button>
 								<a class="card-list__card__button btn btn--transparent"
-									href="single-card.html">Подробнее о вкладе</a>
+									href="single-card.html">Подробнее о карте</a>
 							</div>
 						</div>
 					</div>
@@ -419,7 +419,7 @@
 							<div class="card-list__card__button-wrapper">
 								<button class="card-list__card__button btn">Получить консультацию</button>
 								<a class="card-list__card__button btn btn--transparent"
-									href="single-card.html">Подробнее о вкладе</a>
+									href="single-card.html">Подробнее о карте</a>
 							</div>
 						</div>
 					</div>
