Added a new filter system + several fixes

--- a/src/html/exchanges.html
+++ b/src/html/exchanges.html
@@ -39,7 +39,7 @@
 						<div class="basic-page__body">
 							<div class="exchange-card">
 								<div class="exchange-card__title text--700 text--L text--blue">
-									<span>Курс в офисах</span>
+									<span>Курс в офисах (до 5 тыс)</span>
 								</div>
 								<div class="exchange-card__header-row text--gray text--400 text--M">
 									<div class="exchange-card__currency-title">
@@ -95,7 +95,7 @@
 							</div>
 							<div class="exchange-card">
 								<div class="exchange-card__title text--700 text--L text--blue">
-									<span>Курс в офисах</span>
+									<span>Курс в офисах (от 5 тыс)</span>
 								</div>
 								<div class="exchange-card__header-row text--gray text--400 text--M">
 									<div class="exchange-card__currency-title">
