--- a/src/html/inc/footer.html
+++ b/src/html/inc/footer.html
@@ -59,7 +59,9 @@
                 </div>
             </div>
             <div class="nav-footer-link" id="online">
-                <a class="nav-footer-link" href="#">Онлайн - банк</a>
+                <a class="nav-footer-link" href="ubs.html">
+                    РЕГИСТРАЦИЯ В ЕДИНОЙ БИОМЕТРИЧЕСКОЙ СИСТЕМЕ
+                </a>
             </div>
             <div class="nav-footer" id="navigate">
                 <ul class="nav-list">
