--- a/src/html/coins.html
+++ b/src/html/coins.html
@@ -44,11 +44,11 @@
                                     <div class="coin-search__line">
                                         <input type="text" placeholder="введите название монеты"><button class="btn coin-search__btn">Искать</button>
                                     </div>
-                                    <div class="coin-search__filters filters">
-                                        <div class="filters__title"><span>Сортировать по:</span></div>
-                                        <div class="filters__price filter__sort filter__sort--up"><span>цене</span></div>
-                                        <div class="filters__year filter__sort filter__sort--down"><span>году выпуска</span></div>
-                                        <div class="filters__filter-all">
+                                    <div class="coin-search__filters coin-filters">
+                                        <div class="coin-filters__title"><span>Сортировать по:</span></div>
+                                        <div class="coin-filters__price filter__sort filter__sort--up"><span>цене</span></div>
+                                        <div class="coin-filters__year filter__sort filter__sort--down"><span>году выпуска</span></div>
+                                        <div class="coin-filters__filter-all">
                                             <div class="form-control">
                                                 <input type="radio" id="present" name="coin-filter" checked \>
                                                 <label for="present">в наличии</label>
