--- a/src/html/inc/private-menu.html
+++ b/src/html/inc/private-menu.html
@@ -8,8 +8,8 @@
                 <p class="page__text current__text">Расчеты</p>
             </a>
         </div>
-        <div class="page-item" id="">
-            <a class="page-link" href="">
+        <div class="page-item" id="vip-deposits">
+            <a class="page-link" href="vip-deposits.html">
                 <svg class="page__more">
                     <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-pr-deposite">
                 </svg>
