--- a/src/html/vip-deposits.html
+++ b/src/html/vip-deposits.html
@@ -36,7 +36,8 @@
                                 </div>
                                 <div class="card__table">
                                     <div class="card__table-column">
-                                        <div class="column__title" style="height:5em">
+                                        <div
+                                            class="column__title column__title--large text--LM text--700 text--dark-gray">
                                             <h3>Вид валюты</h3>
                                         </div>
                                         <div class="column__text">
@@ -45,7 +46,8 @@
                                         </div>
                                     </div>
                                     <div class="card__table-column">
-                                        <div class="column__title" style="height:5em">
+                                        <div
+                                            class="column__title column__title--large text--LM text--700 text--dark-gray">
                                             <h3>Минимальная<br>
                                                 сумма вклада</h3>
                                         </div>
@@ -55,12 +57,13 @@
                                         </div>
                                     </div>
                                     <div class="card__table-column">
-                                        <div class="column__pretitle">
+                                        <div class="column__pretitle text--LM text--700 text--dark-gray">
                                             <h3>Процентная ставка (годовых)</h3>
                                         </div>
                                         <div class="columns__wrap">
                                             <div class="columns__item">
-                                                <div class="column__title">
+                                                <div
+                                                    class="column__title column__title--medium  text--LM text--700 text--dark-gray">
                                                     <h3>9 месяцев</h3>
                                                 </div>
                                                 <div class="column__text">
@@ -69,7 +72,18 @@
                                                 </div>
                                             </div>
                                             <div class="columns__item">
-                                                <div class="column__title">
+                                                <div
+                                                    class="column__title column__title--medium  text--LM text--700 text--dark-gray">
+                                                    <h3>9 месяцев</h3>
+                                                </div>
+                                                <div class="column__text">
+                                                    <p class="column__text">9,5</p>
+                                                    <p class="column__text">0,9</p>
+                                                </div>
+                                            </div>
+                                            <div class="columns__item">
+                                                <div
+                                                    class="column__title column__title--medium  text--LM text--700 text--dark-gray">
                                                     <h3>1 год</h3>
                                                 </div>
                                                 <div class="column__text">
@@ -78,7 +92,8 @@
                                                 </div>
                                             </div>
                                             <div class="columns__item">
-                                                <div class="column__title">
+                                                <div
+                                                    class="column__title column__title--medium  text--LM text--700 text--dark-gray">
                                                     <h3>1,5 год</h3>
                                                 </div>
                                                 <div class="column__text">
@@ -87,7 +102,8 @@
                                                 </div>
                                             </div>
                                             <div class="columns__item">
-                                                <div class="column__title">
+                                                <div
+                                                    class="column__title column__title--medium  text--LM text--700 text--dark-gray">
                                                     <h3>2 года</h3>
                                                 </div>
                                                 <div class="column__text">
