Added a check to open the default mobile menu dropdown

--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -48,7 +48,7 @@
 					}'>
 						<span>Хочу вложить </span>
 						<span class="filter-label text--700 text--M text--dark-gray">1</span>
-						<input id="days-range" type="range" class="filter-trigger" name="days" min="1" max="28" value="1" step="1">
+						<input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1" max="28" value="1" step="1">
 					</div>
 					<div class="filter fx-el--30 fx-el--g1 p--10 md-fx-od--1 xsm-fx-el--100" data-filter-type="number" data-filter-name='time' data-scale="breakpoints" data-label-selector=".filter-label" data-label-preset="time" data-breakpoints='
 					{
@@ -69,7 +69,7 @@
 					}'>
 						<span>На срок в</span> 
 						<span class="filter-label text--700 text--M text--dark-gray">1</span>
-						<input id="days-range" type="range" class="filter-trigger" name="days" min="1" max="31" value="1" step="1">
+						<input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1" max="31" value="1" step="1">
 					</div>
 					<div class="md-fx-el--50 md-fx-od--3 fx fx-jc--c xsm-fx-el--100">
 						<button class="btn btn-filter filter-apply-button  p--10 xsm-fx-el--100">
