fix vip-deposits mobile and breadcrumbs

--- a/src/html/inc/client-menu.html
+++ b/src/html/inc/client-menu.html
@@ -2,9 +2,11 @@
     <div class="page-content">
         <div class="page-item" id="contributions">
             <a class="page-link" href="contributions.html">
-                <svg class="page__more current__item" viewBox="0 0 32 32">
+                <img class="page__more current__item" src="../assets/img/svg/contributions.svg" alt="" width="32px"
+                    height="32px">
+                <!-- <svg class="page__more current__item" viewBox="0 0 32 32">
                     <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-contributions" />
-                </svg>
+                </svg> -->
                 <p class="page__text current__text">Вклады и счета</p>
             </a>
         </div>
