--- a/src/html/inc/private-menu.html
+++ b/src/html/inc/private-menu.html
@@ -1,10 +1,18 @@
 <section class="container">
     <div class="page-content">
         <div class="page-item" id="rko">
-            <a class="page-link" href="rko.html">
-                <svg class="page__more current__item" viewBox="0 0 32 32">
+            <a class="page-link link" href="rko.html">
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle">
+                        <img src="../assets/img/icons/ellipse.png" alt="">
+                        <div class="link-img__icon">
+                            <img src="../assets/img/icons/transactions.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <!-- <svg class="page__more current__item" viewBox="0 0 32 32">
                     <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-transactions" />
-                </svg>
+                </svg> -->
                 <p class="page__text current__text">Расчеты</p>
             </a>
         </div>
